// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LAN/> Snapshot managed with enabled DHCP. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          LAN mode
        </label>
        <select
          class="custom-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <small
          class="form-text text-muted"
        >
          
Router mode means that this device manages the LAN (acts as a router, can assign IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
        </small>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            checked=""
            class="custom-control-input"
            id="2"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="2"
          >
            Redirect to 192.168.1.1
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="7"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="7"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Router's IP address in the inner network.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="8"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch"
        >
          <input
            class="custom-control-input"
            id="9"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="9"
          >
            Enable DHCP
          </label>
          <small
            class="form-text text-muted mt-0 mb-3"
          >
            Enable this option to automatically assign IP addresses to the devices connected to the router.
          </small>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="15"
        >
          DHCP start
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="15"
            max="106"
            min="2"
            required=""
            type="number"
            value="192.168.1.10"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="16"
        >
          DHCP max leases
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="16"
            min="1"
            required=""
            type="number"
            value="150"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          Maximum number of addresses available for DHCP clients.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="17"
        >
          Lease time (hours)
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="17"
            min="1"
            required=""
            type="number"
            value="43200"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  >
    <h2>
      DHCP Clients
    </h2>
    <p
      class="text-muted text-center"
    >
      No DHCP clients found.
    </p>
  </div>
</div>
`;

exports[`<LAN/> Snapshot managed. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          LAN mode
        </label>
        <select
          class="custom-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <small
          class="form-text text-muted"
        >
          
Router mode means that this device manages the LAN (acts as a router, can assign IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
        </small>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            checked=""
            class="custom-control-input"
            id="2"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="2"
          >
            Redirect to 192.168.1.1
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="7"
        >
          Router IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="7"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Router's IP address in the inner network.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="8"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch"
        >
          <input
            class="custom-control-input"
            id="9"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="9"
          >
            Enable DHCP
          </label>
          <small
            class="form-text text-muted mt-0 mb-3"
          >
            Enable this option to automatically assign IP addresses to the devices connected to the router.
          </small>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<LAN/> Snapshot unmanaged (dhcp). 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          LAN mode
        </label>
        <select
          class="custom-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <small
          class="form-text text-muted"
        >
          
Router mode means that this device manages the LAN (acts as a router, can assign IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
        </small>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            checked=""
            class="custom-control-input"
            id="2"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="2"
          >
            Redirect to 192.168.1.1
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          IPv4 protocol
        </label>
        <select
          class="custom-select"
          id="3"
        >
          <option
            value="dhcp"
          >
            DHCP (automatic configuration)
          </option>
          <option
            value="none"
          >
            Don't connect this device to LAN
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          for="4"
        >
          DHCP hostname
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            type="text"
            value=""
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Hostname which will be provided to DHCP server.
        </small>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<LAN/> Snapshot unmanaged none. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          LAN mode
        </label>
        <select
          class="custom-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <small
          class="form-text text-muted"
        >
          
Router mode means that this device manages the LAN (acts as a router, can assign IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
        </small>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            checked=""
            class="custom-control-input"
            id="2"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="2"
          >
            Redirect to 192.168.1.1
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          IPv4 protocol
        </label>
        <select
          class="custom-select"
          id="3"
        >
          <option
            value="dhcp"
          >
            DHCP (automatic configuration)
          </option>
          <option
            value="none"
          >
            Don't connect this device to LAN
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
        </select>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<LAN/> Snapshot unmanaged static. 1`] = `
<div>
  <h1>
    LAN
  </h1>
  <p>
    
This section contains settings for the local network (LAN). The provided defaults are suitable for most
networks.

    <br />
    

    <b>
      Note:
    </b>
     If you change the router IP address, all computers in LAN, probably including the one you are
using now, will need to obtain a 
    <b>
      new IP address
    </b>
     which does not happen 
    <b>
      immediately
    </b>
    . It is
recommended to disconnect and reconnect all LAN cables after submitting your changes to force the update.
The next page will not load until you obtain a new IP from DHCP (if DHCP enabled) and you might need to

    <b>
      refresh the page
    </b>
     in your browser.
            
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <form>
      <h2>
        LAN Settings
      </h2>
      <div
        class="form-group"
      >
        <label
          for="1"
        >
          LAN mode
        </label>
        <select
          class="custom-select"
          id="1"
        >
          <option
            value="managed"
          >
            Router
          </option>
          <option
            value="unmanaged"
          >
            Computer
          </option>
        </select>
        <small
          class="form-text text-muted"
        >
          
Router mode means that this device manages the LAN (acts as a router, can assign IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
        </small>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            checked=""
            class="custom-control-input"
            id="2"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="2"
          >
            Redirect to 192.168.1.1
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          IPv4 protocol
        </label>
        <select
          class="custom-select"
          id="3"
        >
          <option
            value="dhcp"
          >
            DHCP (automatic configuration)
          </option>
          <option
            value="none"
          >
            Don't connect this device to LAN
          </option>
          <option
            value="static"
          >
            Static IP address (manual configuration)
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          for="8"
        >
          IP address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="9"
        >
          Network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="9"
            required=""
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="10"
        >
          Gateway
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="10"
            required=""
            type="text"
            value="192.168.1.4"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="11"
        >
          DNS server 1
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="11"
            type="text"
            value=""
          />
        </div>
        <small
          class="form-text text-muted"
        >
          DNS server address is not required as the built-in DNS resolver is capable of working without it.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="12"
        >
          DNS server 2
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="12"
            type="text"
            value=""
          />
        </div>
        <small
          class="form-text text-muted"
        >
          DNS server address is not required as the built-in DNS resolver is capable of working without it.
        </small>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="dhcp-clients-container"
  />
</div>
`;
